--- a/themes/sdcs-1/style.css
+++ b/themes/sdcs-1/style.css
@@ -2,21 +2,14 @@ html, body {
   margin: 0;  /* let me get to the edge of the page galdarnitt!! */
   /* font-family: "Raleway", "Alegreya Sans", sans-serif; */
   /* font-family: 'Open Sans', sans-serif; */
-  font-family: 'Roboto Slab', serif;
+  /* font-family: 'Roboto Slab', serif; */
   /* background-color: #222;
-  color: #ddd; */
-  color: #3a609d;
-  background-color: #fff;
+  /* color: #ddd; */
+  /* color: #3a609d; */
+  /* background-color: #fff; */
   /* background-color: #c2ab7a; */
   /* background-color: #e7c9a9; */
   font-size: 20px;
-}
-body * {
-  /* color: #ddd; */
-  color: #222;
-  color: #a9c6e6;
-  color: #4c7098;
-  /* color: #3a609d; */
 }
 
 /* define some width classes to make layout WAY more predictable and simple */
@@ -172,12 +165,74 @@ h1, .fs-h1 { font-size: 1.75rem; }
 
 
 /* Custom stuff */
-.mt-1 {
-  margin-top: 5rem;
+html { scroll-behavior: smooth; }
+
+body,
+.ff-1 { font-family: 'Roboto', sans-serif; }
+h1, h2,
+.ff-2 { font-family: 'Patua One', cursive; }
+
+.bgc-yellow { background-color: #fee018; }
+.bgc-orange-light { background-color: #feae03; }
+.bgc-orange { background-color: #ec7d31; } /* https://hexcolor.co/hex/ec7d31 */
+.bgc-blue-light { background-color: #03b1fe; }
+/* .bgc-blue-light { background-color: #0379fe; } */
+.bgc-blue { background-color: #3180ec; }
+/* .bgc-blue { background-color: #3148ec; } */
+
+.c-white { color: #fff; }
+.c-black { color: #000; }
+.c-grey-dark { color: #222; }
+.c-yellow { color: #fee018; }
+.c-orange-light { color: #feae03; }
+.c-orange { color: #ec7d31; } /* https://hexcolor.co/hex/ec7d31 */
+.c-blue-light { color: #03b1fe; }
+/* .c-blue-light { color: #0379fe; } */
+h2,
+.c-blue { color: #3180ec; }
+/* .c-blue { background-color: #3148ec; } */
+
+
+body > main > section {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+body > main > section h2 {
+  margin-bottom: 1rem;
+}
+.margx--1 {
+  margin-left: -.25rem;
+  margin-right: -.25rem;
+}
+.margx--2 {
+  margin-left: -.5rem;
+  margin-right: -.5rem;
+}
+.padx-1 {
+  padding-left: .25rem;
+  padding-right: .25rem;
+}
+.padx-2 {
+  padding-left: .5rem;
+  padding-right: .5rem;
+}
+.pady-1 {
+  padding-top: .25rem;
+  padding-bottom: .25rem;
+}
+.pady-2 {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
 }
 .h3-icon-headers > article > i {
   font-size: 3rem;
 }
+
+header nav.top-nav > a {
+  color: white;
+  text-decoration: none;
+}
+
 .contact-form {
   display: flex;
   flex-direction: column;
