--- a/themes/sdcs-1/style.css
+++ b/themes/sdcs-1/style.css
@@ -47,6 +47,8 @@ h1, .fs-h1 { font-size: 1.75rem; }
 
 .df-col { display: flex; flex-direction: column;}
 .df-row { display: flex; flex-direction: row; }
+.df-col-reverse { display: flex; flex-direction: column-reverse;}
+.df-row-reverse { display: flex; flex-direction: row-reverse; }
 .d-none { display: none; }
 .d-block { display: block; }
 .display-toggle:checked + .d-block-checked { display: block;}
@@ -88,6 +90,8 @@ h1, .fs-h1 { font-size: 1.75rem; }
   .w1-md { width: 8.3%; flex-grow: 0; }
   .df-col-md { display: flex; flex-direction: column;}
   .df-row-md { display: flex; flex-direction: row; }
+  .df-col-reverse-md { display: flex; flex-direction: column-reverse;}
+  .df-row-reverse-md { display: flex; flex-direction: row-reverse; }
   .d-block-md { display: block; }
   .d-none-md { display: none; }
   .jc-center-md { justify-content: center; }
@@ -126,7 +130,7 @@ h1, .fs-h1 { font-size: 1.75rem; }
   flex: none;
   width: 100%;
   height: 2px;
-  background: #9c8868;
+  background-color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,8 +171,8 @@ h1, .fs-h1 { font-size: 1.75rem; }
 /* Custom stuff */
 html { scroll-behavior: smooth; }
 
-body,
-.ff-1 { font-family: 'Roboto', sans-serif; }
+body, textarea,
+.ff-1 { font-family: 'Open Sans', sans-serif; }
 h1, h2,
 .ff-2 { font-family: 'Patua One', cursive; }
 
@@ -177,9 +181,11 @@ h1, h2,
 .bgc-orange { background-color: #ec7d31; } /* https://hexcolor.co/hex/ec7d31 */
 .bgc-blue-light { background-color: #03b1fe; }
 /* .bgc-blue-light { background-color: #0379fe; } */
+input[type=submit],
 .bgc-blue { background-color: #3180ec; }
 /* .bgc-blue { background-color: #3148ec; } */
 
+input[type=submit],
 .c-white { color: #fff; }
 .c-black { color: #000; }
 .c-grey-dark { color: #222; }
@@ -194,8 +200,8 @@ h2,
 
 
 body > main > section {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 body > main > section h2 {
   margin-bottom: 1rem;
@@ -247,10 +253,16 @@ header nav.top-nav > a {
   border: none;
   border: 1px solid black;
   outline: none;
-  font-family: 'Roboto Slab', serif;
   font-size: 1rem;
 }
 .contact-form > textarea {
   height: 5rem;
   resize: none;
+}
+.contact-form > input[type=submit] {
+  cursor: pointer;
+  transition: .25s;
+}
+.contact-form > input[type=submit]:hover {
+  opacity: .9;
 }
